<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="LOGIN" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/border_spinner">

            <Spinner
                android:id="@+id/catogery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:background="@null"
                android:dropDownSelector="@color/colorAccent"
                android:imeOptions="actionDone"
                android:minHeight="@dimen/_35sdp"
                android:paddingLeft="@dimen/_1sdp"
                android:paddingRight="@dimen/_1sdp"
                android:spinnerMode="dropdown"
                android:textColor="@color/ColorBlack"
                android:textColorHint="@color/ColorBlack"
                android:textSize="@dimen/_12sdp"
                android:theme="@style/ThemeOverlay.AppCompat.Light"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_2sdp"
                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/edtPhone"
                style="@style/modifiedEditText"
                android:hint="@string/login_phone_hint"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/edtPin"
                style="@style/modifiedEditText"
                android:hint="@string/login_pin_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Me"
            android:id="@+id/remember"/>
        <ProgressBar
            android:id="@+id/progressbar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/btnLogin"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="Login" />
        <TextView
            android:id="@+id/txtLogin"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>

